# ecopulse-ocean

./: .gitignore  README.md  index.html  main.py  pyproject.toml
reports/: report_na_24h.html  report_scs_24h.html  report_scs_24h.json
src/earthreport/: __init__.py  cli.py  config.py
src/earthreport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/earthreport/analyst/: carbon.py  llm.py  prompts.py  report.py
src/earthreport/dashboard/: renderer.py
src/earthreport/data/: connectors.py  denoiser.py  simulator.py
tests/: test_analyst.py  test_dashboard.py  test_data.py
web/: server.py
web/static/: app.js  app3d.js  globe.js  style.css
web/templates/: dashboard.html
