[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthreport"
version = "0.1.0"
description = "地球动态报告 — 海洋碳汇数字孪生与智能审计系统"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
llm = [
    "anthropic>=0.30",
    "openai>=1.0",
]

[project.scripts]
earthreport = "earthreport.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
